--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 <head>
   <title>Timkline</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 </head>
 <body>
-<h1>Timkiline</h1>
-<p>En cours de construction</p>
+  <div class="container">
+    <h1>Timkiline</h1>
+    <p>En cours de construction</p>
+  </div>
 </body>
 </html>
