--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="container">
     <h1>Timkiline</h1>
-    <IMG SRC="https://scontent.cdninstagram.com/hphotos-xft1/l/t51.2885-19/11111495_851355738252578_571238409_a.jpg" align=middle>
+    <IMG SRC="https://scontent.cdninstagram.com/hphotos-xft1/l/t51.2885-19/11111495_851355738252578_571238409_a.jpg" align=MIDDLE >
     <p>En cours de construction</p>
   </div>
 </body>
