--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
   <div class="container">
+    <align=MIDDLE>
     <h1>Timkiline</h1>
-    <IMG SRC="https://scontent.cdninstagram.com/hphotos-xft1/l/t51.2885-19/11111495_851355738252578_571238409_a.jpg" align=MIDDLE >
+    <IMG SRC="https://scontent.cdninstagram.com/hphotos-xft1/l/t51.2885-19/11111495_851355738252578_571238409_a.jpg">
     <p>En cours de construction</p>
   </div>
 </body>
