--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 </head>
 <body>
-  <div class="container">
+  <div class="container" style="text-align: center">
         <h1>Timkiline</h1>
-    <IMG SRC="https://scontent.cdninstagram.com/hphotos-xft1/l/t51.2885-19/11111495_851355738252578_571238409_a.jpg" alt="Nouveau !">
+    <IMG SRC="https://scontent.cdninstagram.com/hphotos-xft1/l/t51.2885-19/11111495_851355738252578_571238409_a.jpg">
     <p>En cours de construction</p>
   </div>
 </body>
