--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <div class="container">
         <h1>Timkiline</h1>
     <IMG SRC="https://scontent.cdninstagram.com/hphotos-xft1/l/t51.2885-19/11111495_851355738252578_571238409_a.jpg" align="middle">
+    <p>This is some text. <img src="https://scontent.cdninstagram.com/hphotos-xft1/l/t51.2885-19/11111495_851355738252578_571238409_a.jpg" alt="Smiley face" align="middle"> This is some text.</p>
     <p>En cours de construction</p>
   </div>
 </body>
