--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="container">
         <h1>Timkiline</h1>
     <IMG SRC="https://scontent.cdninstagram.com/hphotos-xft1/l/t51.2885-19/11111495_851355738252578_571238409_a.jpg" align="middle">
-    <IMG align="left" src="http://foo.com/animage.gif" alt="mon chat">
+    <IMG align="left" src="http://scontent.cdninstagram.com/hphotos-xft1/l/t51.2885-19/11111495_851355738252578_571238409_a.jpg" alt="mon chat">
     <p>En cours de construction</p>
   </div>
 </body>
