--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bienvenue</title>
+  <title>Timkilin</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 </head>
 <body>
   <div class="container">
-        <h1>Timkiline</h1>
+        <h1>Bienvenue</h1>
     <IMG SRC="https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-9/10487607_416157718540404_8170131368888412788_n.jpg?oh=a853757dd5619c84235ac48122a11172&oe=57C46ED9">
         <p>En cours de construction</p>
         <IMG SRC="https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-0/s480x480/13413618_1560025817632280_4634482701710836565_n.jpg?oh=33f714c1357041d7b30a54600945aebc&oe=57CCBEF2">
