--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <IMG SRC="https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-9/10487607_416157718540404_8170131368888412788_n.jpg?oh=a853757dd5619c84235ac48122a11172&oe=57C46ED9" height="450" width="450">
     <p> </p>
     <IMG SRC="https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-0/s480x480/13413618_1560025817632280_4634482701710836565_n.jpg?oh=33f714c1357041d7b30a54600945aebc&oe=57CCBEF2">
-    <a href="https://www.facebook.com/Timkiline-Produits-authentiques-du-terroir-406133616209481/ IMG SRC="http://location-bessans.com/images/logo-facebook.png">
-    </a>
-  </CENTER>
+    <IMG SRC="http://location-bessans.com/images/logo-facebook.png">
+    </CENTER>
   
   </div>
 </body>
