--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p> </p>
     <IMG SRC="https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-0/s480x480/13413618_1560025817632280_4634482701710836565_n.jpg?oh=33f714c1357041d7b30a54600945aebc&oe=57CCBEF2">
     <p> </p>
-    <P><A href="https://www.facebook.com/Timkiline-Produits-authentiques-du-terroir-406133616209481/" title="Get Firefox - Web browsing redefined."><IMG SRC="http://location-bessans.com/images/logo-facebook.png">
+    <P><A href="https://www.facebook.com/Timkiline-Produits-authentiques-du-terroir-406133616209481/" title="Timkiline produits authentiques du terroir marocain."><IMG SRC="http://location-bessans.com/images/logo-facebook.png">
     </CENTER>
   
   </div>
