--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </CENTER>
   <a href="http://www.compteurdevisite.com" target="_Blank" title="compteur">compteur</a><br/>
 <script type="text/javascript" src="http://counter8.01counter.com/private/countertab.js?c=7601c013cf3d46e69b0f9ecd6dbb2d6a"></script>
-<noscript><a href="http://www.compteurdevisite.com" title="compteur"><img src="http://counter8.01counter.com/private/compteurdevisite.php?c=7601c013cf3d46e69b0f9ecd6dbb2d6a" border="0" title="thx" alt="compteur"></a>
+<noscript><a href="http://www.compteurdevisite.com" title="compteur"><img src="http://counter8.01counter.com/private/compteurdevisite.php?c=7601c013cf3d46e69b0f9ecd6dbb2d6a" border="0" title="compteur" alt="compteur"></a>
 </noscript>
   </div>
 </body>
