--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <p> </p>
     <P><A href="https://www.facebook.com/Timkiline-Produits-authentiques-du-terroir-406133616209481/" title="Timkiline produits authentiques du terroir marocain."><IMG SRC="http://location-bessans.com/images/logo-facebook.png">
     </CENTER>
+    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D655761107913396%26id%3D406133616209481&width=500" width="500" height="473" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
   <a href="http://www.compteurdevisite.com" target="_Blank" title="compteur">1</a><br/>
 <script type="text/javascript" src="http://counter8.01counter.com/private/countertab.js?c=7601c013cf3d46e69b0f9ecd6dbb2d6a"></script>
 <noscript><a href="http://www.compteurdevisite.com" title="compteur"><img src="http://counter8.01counter.com/private/compteurdevisite.php?c=7601c013cf3d46e69b0f9ecd6dbb2d6a" border="0" title="compteur" alt="compteur"></a>
