--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 </head>
 <body>
-  <video autoplay  poster="https://www.facebook.com/Timkiline/videos/1569402053361323/" id="bgvid" loop>
+  <video autoplay  poster="https://www.facebook.com/Timkiline/videos/1569402053361323/" id="avi" loop>
   <!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
-<source src="https://www.facebook.com/Timkiline/videos/1569402053361323/" type="video/avi">
 <source src="https://www.facebook.com/Timkiline/videos/1569402053361323/" type="video/avi">
 </video>
 <div id="Timkiline">
 <h1>Timkiline</h1>
-<p><a href="https://www.facebook.com/Timkiline/videos/1569402053361323/">original article</a>
 <p>Timkiline vous propose les produits du terroir Marocain. </p>
 <button>Pause</button>
 </div>
