--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <video id="video_background" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
 <source src="https://drive.google.com/file/d/0Bz0UWW5NBrRUdmJ5enpTS2Q3NGM/view?usp=sharing" type="video/mp4">
-<img src="background.jpg" width="100%" height="100%" > </video>
+<img src="https://drive.google.com/file/d/0Bz0UWW5NBrRUdmJ5enpTS2Q3NGM/view?usp=sharing" width="100%" height="100%" > </video>
 body{
 margin: 0;
 }
