--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 </head>
 <body>
+  
+  <div class="header-unit " >
+    <div id="video-container">
+        <video autoplay loop class="fillWidth" >
+            <!--poster="images/soleil.png-->
+            <source src="https://drive.google.com/file/d/0Bz0UWW5NBrRUdmJ5enpTS2Q3NGM/view?usp=sharing" type="video/mp4"/>
+            <source src="https://drive.google.com/file/d/0Bz0UWW5NBrRUM0dyTTQ1ZEx6dkk/view?usp=sharing" type="video/ogg"/>
+            Your browser does not support the video tag. I suggest you upgrade your browser.
+        </video>
+        <!--[if lte IE 6 ]>
+                <embed src="http://www.youtube.com/v/_etwz7NkemE&hl=fr" type="application/x-shockwave-flash" wmode="transparent" width="425" height="355"></embed>
+        <![endif]-->
+    </div>
+</div>
    <div class="container">
      <CENTER> 
     <h1> </h1>
