--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <![endif]-->
     </div>
 </div>
+.header-unit{	top:0%;left:0%;height:100%;width:100%;overflow: hidden;  position:absolute;background-size: cover;margin-left:auto;margin-right:auto;}
+video {	position: absolute;z-index: -1;}
+video.fillWidth {width: 100%;min-height: 100%;}
+#video-container { top:0%; left:0%; height:100%; width:100%; overflow: hidden; background-size:cover} 
    <div class="container">
      <CENTER> 
     <h1> </h1>
