--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   
   <title>Timkiline Produit du terroir marocain</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+  <script src=""></script>
 </head>
 <body>
-     <body background="https://scontent-lht6-1.xx.fbcdn.net/v/t1.0-9/18892954_871081783047993_6782855381765766151_n.jpg?oh=1f8e938f790c80b8fda4a8a490c0d713&oe=59ADF0A4" background-position:100% 0%;>
+     <body background="https://scontent-lht6-1.xx.fbcdn.net/v/t1.0-9/18892954_871081783047993_6782855381765766151_n.jpg?oh=1f8e938f790c80b8fda4a8a490c0d713&oe=59ADF0A4" width="1900" height="1573">
      <div class="container">
      <CENTER> 
     <h1> </h1>
