--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   <script src=""></script>
 </head>
 <body>
-     <body background="https://scontent-lht6-1.xx.fbcdn.net/v/t1.0-9/18892954_871081783047993_6782855381765766151_n.jpg?oh=1f8e938f790c80b8fda4a8a490c0d713&oe=59ADF0A4" width="1900" height="1573">
+  background: #ffffff;
+  color: #000000;
+  margin: 53px;
+  width: 100%;
+  background-image : https://scontent-lht6-1.xx.fbcdn.net/v/t1.0-9/18892954_871081783047993_6782855381765766151_n.jpg?oh=1f8e938f790c80b8fda4a8a490c0d713&oe=59ADF0A4; 
+  background-repeat: no-repeat ;
+  background-position:top;
      <div class="container">
      <CENTER> 
     <h1> </h1>
