--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <script src=""></script>
 </head>
 <body>
+  div {
+  background-image:url(soif.jpg);
+  background-size: 30% 30%;
+}
      <div class="container">
      <CENTER> 
     <h1> </h1>
