--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
   <script src=""></script>
 </head>
 <body>
-  <div {
-  background-image:https://scontent-lht6-1.xx.fbcdn.net/v/t1.0-9/18892954_871081783047993_6782855381765766151_n.jpg?oh=1f8e938f790c80b8fda4a8a490c0d713&oe=59ADF0A4;
-  background-size: 30% 30%;
-}>
+  <body background="https://scontent-lht6-1.xx.fbcdn.net/v/t1.0-9/18892954_871081783047993_6782855381765766151_n.jpg?oh=1f8e938f790c80b8fda4a8a490c0d713&oe=59ADF0A4"> 
      <div class="container">
      <CENTER> 
     <h1> </h1>
