--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <script src=""></script>
 </head>
 <body>
-  < background:https://scontent-lht6-1.xx.fbcdn.net/v/t1.0-9/18892954_871081783047993_6782855381765766151_n.jpg?oh=1f8e938f790c80b8fda4a8a490c0d713&oe=59ADF0A4; 
+  < body 
+        background:https://scontent-lht6-1.xx.fbcdn.net/v/t1.0-9/18892954_871081783047993_6782855381765766151_n.jpg?oh=1f8e938f790c80b8fda4a8a490c0d713&oe=59ADF0A4; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
