--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   <script src=""></script>
 </head>
 <body>
-  <body background="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/19510483_1707260686242125_3007395499437354166_n.jpg?oh=608546ba80cf791f6ab902d48af276b7&oe=59CE178F"
-        background-size: cover;
-        >
-     <div class="container">
+  <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/19510483_1707260686242125_3007395499437354166_n.jpg?oh=608546ba80cf791f6ab902d48af276b7&oe=59CE178F">
+       <div class="container">
      <CENTER> 
     <h1> </h1>
     <IMG>
