--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div>
-  <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t31.0-8/21272984_938845579604946_845510174936508397_o.jpg?oh=2fb89609cc53b268dac108e21c5e7b66&oe=5A1A0E0A" width="660" height="660">
+  <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t31.0-8/21272984_938845579604946_845510174936508397_o.jpg?oh=2fb89609cc53b268dac108e21c5e7b66&oe=5A1A0E0A">
      <CENTER> 
     <P><A href="https://scontent-lht6-1.xx.fbcdn.net/v/t31.0-8/s720x720/18879958_871081783047993_6782855381765766151_o.jpg?oh=1774fffdd33626c6fb9edd5de0ac27a4&oe=59A16112" title="Timkiline produits authentiques du terroir marocain."><IMG SRC="http://location-bessans.com/images/logo-facebook.png">
     </CENTER>
