--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <title>Timkiline Produit du terroir marocain</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
   <script src=""></script>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3494659910253514",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body>
   <div>
