--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div>
   <img src="https://scontent.fcmn3-2.fna.fbcdn.net/v/t31.0-8/p960x960/10928915_416157668540409_8855533573938674568_o.jpg?_nc_cat=101&_nc_sid=7aed08&_nc_ohc=HcwnW6dvm0kAX90oR28&_nc_ht=scontent.fcmn3-2.fna&_nc_tp=6&oh=38b7bf7981754fa7982a85eb9f0f94d3&oe=5EBC9C7C">
      <CENTER> 
-    <P><A href="https://scontent-lht6-1.xx.fbcdn.net/v/t31.0-8/s720x720/18879958_871081783047993_6782855381765766151_o.jpg?oh=1774fffdd33626c6fb9edd5de0ac27a4&oe=59A16112" title="Timkiline produits authentiques du terroir marocain."><IMG SRC="http://location-bessans.com/images/logo-facebook.png">
+    <P><A href="https://www.facebook.com/timkilt/" title="Timkiline produits authentiques du terroir marocain."><IMG SRC="http://location-bessans.com/images/logo-facebook.png">
     </CENTER>
      <a href="http://www.compteurdevisite.com" title="compteur gratuit"><img src="http://counter7.01counter.com/private/compteurdevisite.php?c=143fc021a38b33749beb7ebfa5ab13e9" border="0" title="compteur gratuit" alt="compteur gratuit"></a>
   </div>
