--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <body>
   <div>
   <img src="https://scontent.fcmn3-2.fna.fbcdn.net/v/t31.0-8/p960x960/10928915_416157668540409_8855533573938674568_o.jpg?_nc_cat=101&_nc_sid=7aed08&_nc_ohc=HcwnW6dvm0kAX90oR28&_nc_ht=scontent.fcmn3-2.fna&_nc_tp=6&oh=38b7bf7981754fa7982a85eb9f0f94d3&oe=5EBC9C7C">
-     <CENTER> 
+    <CENTER> 
+    <P><A href="https://www.instagram.com/timkiline/" title="Timkiline produits authentiques du terroir marocain."><IMG SRC="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/1200px-Instagram_logo_2016.svg.png">
+    </CENTER>
+    <CENTER> 
     <P><A href="https://www.facebook.com/timkilt/" title="Timkiline produits authentiques du terroir marocain."><IMG SRC="http://location-bessans.com/images/logo-facebook.png">
     </CENTER>
      <a href="http://www.compteurdevisite.com" title="compteur gratuit"><img src="http://counter7.01counter.com/private/compteurdevisite.php?c=143fc021a38b33749beb7ebfa5ab13e9" border="0" title="compteur gratuit" alt="compteur gratuit"></a>
