--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 </head>
 <body>
   <div>
+    <CENTER>
   <img src="https://scontent.fcmn3-2.fna.fbcdn.net/v/t31.0-8/p960x960/10928915_416157668540409_8855533573938674568_o.jpg?_nc_cat=101&_nc_sid=7aed08&_nc_ohc=HcwnW6dvm0kAX90oR28&_nc_ht=scontent.fcmn3-2.fna&_nc_tp=6&oh=38b7bf7981754fa7982a85eb9f0f94d3&oe=5EBC9C7C">
-    <CENTER> 
+    </CENTER>
+      <CENTER> 
     <P><A href="https://www.instagram.com/timkiline/" title="Timkiline produits authentiques du terroir marocain."><IMG SRC="https://upload.wikimedia.org/wikipedia/commons/3/30/The_Instagram_Logo.jpg">
     </CENTER>
     <CENTER> 
