--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     </CENTER>
       <CENTER>
      <P><A href="tel:+212635606095"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQUtNkwrKo6wHkt1aFcXz1uQKqA_VvfBT9AODXNtnguMb78t06Q&usqp=CAU">
-     <a href="http://www.compteurdevisite.com" title="compteur gratuit"><img src="http://counter7.01counter.com/private/compteurdevisite.php?c=143fc021a38b33749beb7ebfa5ab13e9" border="0" title="compteur gratuit" alt="compteur gratuit"></a>
+    </CENTER>
+       <a href="http://www.compteurdevisite.com" title="compteur gratuit"><img src="http://counter7.01counter.com/private/compteurdevisite.php?c=143fc021a38b33749beb7ebfa5ab13e9" border="0" title="compteur gratuit" alt="compteur gratuit"></a>
   </div>
 </body>
 </html>
