--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
   <img src="https://www.garage-tonon.lu/construction.png">
     </CENTER> 
       <CENTER> 
-    <P><A href="https://www.instagram.com/timkiline/" title="Timkiline produits authentiques du terroir marocain."><IMG SRC="https://lh3.googleusercontent.com/LZdsQGEbRqcZIjvWdiJTjlaGQJQjP097FAIvl4XfOi_XHagmC83Lc04PDxaq8Ml6xJk">
+    <P><A href="https://www.instagram.com/timkiline/" title="Instagram."><IMG SRC="https://lh3.googleusercontent.com/LZdsQGEbRqcZIjvWdiJTjlaGQJQjP097FAIvl4XfOi_XHagmC83Lc04PDxaq8Ml6xJk" alt="Notre compte Instagram">
     </CENTER>
     <CENTER> 
-    <P><A href="https://www.facebook.com/timkilt/" title="Timkiline produits authentiques du terroir marocain."><IMG SRC="http://location-bessans.com/images/logo-facebook.png">
+    <P><A href="https://www.facebook.com/timkilt/" title="Facebook."><IMG SRC="http://location-bessans.com/images/logo-facebook.png" alt="Notre page Facebook">
     </CENTER>
       <CENTER>
-     <P><A href="tel:+212635606095"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQUtNkwrKo6wHkt1aFcXz1uQKqA_VvfBT9AODXNtnguMb78t06Q&usqp=CAU">
+     <P><A href="tel:+212635606095"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQUtNkwrKo6wHkt1aFcXz1uQKqA_VvfBT9AODXNtnguMb78t06Q&usqp=CAU" alt="Nous appeler">
     </CENTER>
+     <P><a href="mailto:contact@timkiline.com"> Contactez-nous </a>
        <a href="http://www.compteurdevisite.com" title="compteur gratuit"><img src="http://counter7.01counter.com/private/compteurdevisite.php?c=143fc021a38b33749beb7ebfa5ab13e9" border="0" title="compteur gratuit" alt="compteur gratuit"></a>
   </div>
 </body>
